switch to java 8