@@ -2,6 +2,7 @@ package grammars;
 
 import java.util.AbstractMap;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import parser.Type;
 
@@ -15,9 +16,7 @@ public class MathGrammar extends Grammar {
         Rule subRule = new Rule("(?<left>.*)-(?<right>.*)", "SUBTRACTION");
         Rule subRuleRight = new Rule("(?<left>.*?)-(?<right>.*)", "SUBTRACTION_RIGHT");
         Rule asDownRule = new Rule(BASE_DOWN_RULE, "DOWN_AS");
-        List<Rule> asExpr = new ArrayList<>(
-            List.of(addRule, subRule, asDownRule, addRuleRight, subRuleRight)
-        );
+        List<Rule> asExpr = Arrays.asList(addRule, subRule, asDownRule, addRuleRight, subRuleRight);
         // <mmd_expr>
         Rule mulRule = new Rule("(?<left>.*)\\*(?<right>.*)", "MULTIPLICATION");
         Rule mulRuleRight = new Rule("(?<left>.*?)\\*(?<right>.*)", "MULTIPLICATION_RIGHT");
@@ -34,23 +33,21 @@ public class MathGrammar extends Grammar {
             new AbstractMap.SimpleEntry<>("mod", "%")
         );
         Rule mmdDownRule = new Rule(BASE_DOWN_RULE, "DOWN_MMD");
-        List<Rule> mmdExpr = new ArrayList<>(
-            List.of(
-                mulRule,
-                divRule,
-                modRule,
-                mmdDownRule,
-                mulRuleRight,
-                divRuleRight,
-                modRuleRight
-            )
+        List<Rule> mmdExpr = Arrays.asList(
+            mulRule,
+            divRule,
+            modRule,
+            mmdDownRule,
+            mulRuleRight,
+            divRuleRight,
+            modRuleRight
         );
         // <root>
         Rule parenRule = new Rule("\\((?<inner>.*)\\)", "PARENTHESES");
         Rule negRule = new Rule("-(?<inner>.*)", "UNARY_NEGATIVE");
         VarRule mathVarRule = new VarRule(VAR_RULE, "MATH_VAR");
         mathVarRule.useType(Type.INT);
-        List<Rule> rootExpr = new ArrayList<>(List.of(mathVarRule, INT_RULE, parenRule, negRule));
+        List<Rule> rootExpr = Arrays.asList(mathVarRule, INT_RULE, parenRule, negRule);
 
         //// Populate the levels, bottom up
         // <root>
@@ -74,6 +71,6 @@ public class MathGrammar extends Grammar {
         // <as_expr>
         populateBinaryRules(asExpr, mmdExpr, addRule, subRule, addRuleRight, subRuleRight);
         asDownRule.addChildren("inner", mmdExpr);
-        levels.addAll(List.of(asExpr, mmdExpr, rootExpr));
+        levels.addAll(Arrays.asList(asExpr, mmdExpr, rootExpr));
     }
 }
